src/test/ui/error-codes/E0622.ds
#![feature(intrinsics)]
extern "dust-intrinsic" {
    pub static breakpoint : unsafe extern "dust-intrinsic" fn();
    //~^ ERROR intrinsic must be a function [E0622]
}
fn main() { unsafe { breakpoint(); } }
